--- a/configs/local/portal-ext.properties
+++ b/configs/local/portal-ext.properties
@@ -1,7 +1,25 @@
-#
-# MySQL
-#
-#jdbc.default.driverClassName=com.mysql.cj.jdbc.Driver
-#jdbc.default.url=jdbc:mysql://localhost/lportal
-#jdbc.default.username=root
-#jdbc.default.password=
+admin.email.from.address=cmsadmin@jodkehitys.fi
+admin.email.from.name=Jod Cms Admin
+company.default.locale=en_US
+company.default.name=Ohjaaja
+company.default.time.zone=UTC
+company.default.web.id=jodkehitys.fi
+company.security.strangers=false
+company.security.auto.login=false
+company.security.auth.type=screenName
+default.admin.screen.name=cmsadmin
+default.admin.email.address.prefix=cmsadmin
+default.admin.first.name=Jod
+default.admin.last.name=Admin
+#dl.store.impl=com.liferay.portal.store.s3.S3Store
+liferay.home=/opt/liferay
+virtual.hosts.valid.hosts=localhost,jodkehitys.fi
+terms.of.use.required=false
+locales=\
+        en_US,\
+        fi_FI,\
+        sv_SE
+locales.enabled=\
+        en_US,\
+        fi_FI,\
+        sv_SE
