--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,5 @@ liferay.workspace.wars.dir=modules
 microsoft.translator.subscription.key=
 liferay.workspace.product=portal-7.4-ga132
 target.platform.index.sources = true
+#Temporary. Remove this when we upgrade Liferay to next release
+liferay.workspace.docker.image.liferay=liferay/portal:7.4.3.129-ga129
