--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: application
+          include-hidden-files: true
           path: |
             build/docker/*
 
@@ -89,7 +90,7 @@ jobs:
           tags: ${{ steps.docker-meta.outputs.tags }}
           labels: ${{ steps.docker-meta.outputs.labels }}
           file: build/docker/Dockerfile
-          context: .
+          context: build/docker
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
