--- a/configs/uat/portal-ext.properties
+++ b/configs/uat/portal-ext.properties
@@ -11,9 +11,8 @@ default.admin.screen.name=cmsadmin
 default.admin.email.address.prefix=cmsadmin
 default.admin.first.name=Jod
 default.admin.last.name=Admin
-#dl.store.impl=com.liferay.portal.store.s3.S3Store
 liferay.home=/opt/liferay
-virtual.hosts.valid.hosts=localhost,jodtestaus.fi
+virtual.hosts.valid.hosts=*
 terms.of.use.required=false
 locales=\
         en_US,\
