--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
       - uses: gradle/actions/setup-gradle@v3
 
       - name: Build with Gradle
-        run: ./gradlew --no-daemon clean createDockerfile
+        run: ./gradlew --no-daemon clean createDockerfile dockerDeploy
 
       - uses: actions/upload-artifact@v4
         with:
