OPHJOD-1450: Set available timezones, default timezone and default locale

--- a/configs/dev/portal-ext.properties
+++ b/configs/dev/portal-ext.properties
@@ -1,8 +1,8 @@
 admin.email.from.address=cmsadmin@jodkehitys.fi
 admin.email.from.name=Jod Cms Admin
-company.default.locale=en_US
+company.default.locale=fi_FI
 company.default.name=Ohjaaja
-company.default.time.zone=UTC
+company.default.time.zone=Europe/Helsinki
 company.default.web.id=jodkehitys.fi
 company.security.strangers=false
 company.security.auto.login=false
@@ -22,4 +22,8 @@ locales.enabled=\
         en_US,\
         fi_FI,\
         sv_SE
+time.zones=\
+        UTC,\
+        Europe/Stockholm,\
+        Europe/Helsinki
 
