--- a/configs/prod/portal-ext.properties
+++ b/configs/prod/portal-ext.properties
@@ -1,7 +1,28 @@
-#
-# MySQL
-#
-#jdbc.default.driverClassName=com.mysql.cj.jdbc.Driver
-#jdbc.default.url=jdbc:mysql://prod.server/lportalprod
-#jdbc.default.username=root
-#jdbc.default.password=
+admin.email.from.address=cmsadmin@jodtestaus.fi
+admin.email.from.name=Jod Cms Admin
+company.default.locale=fi_FI
+company.default.name=Ohjaaja
+company.default.time.zone=Europe/Helsinki
+company.default.web.id=jodtestaus.fi
+company.security.strangers=false
+company.security.auto.login=false
+company.security.auth.type=screenName
+default.admin.screen.name=cmsadmin
+default.admin.email.address.prefix=cmsadmin
+default.admin.first.name=Jod
+default.admin.last.name=Admin
+liferay.home=/opt/liferay
+virtual.hosts.valid.hosts=*
+terms.of.use.required=false
+locales=\
+        en_US,\
+        fi_FI,\
+        sv_SE
+locales.enabled=\
+        en_US,\
+        fi_FI,\
+        sv_SE
+time.zones=\
+        UTC,\
+        Europe/Stockholm,\
+        Europe/Helsinki
