--- a/modules/jod-ohjaaja-cms-tags/build.gradle
+++ b/modules/jod-ohjaaja-cms-tags/build.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 dependencies {
 	compileOnly group: "com.liferay.portal", name: "release.portal.api", version: "latest.release"
+  compileOnly group: "org.osgi", name: "org.osgi.service.jaxrs", version: "latest.release"
 }
 spotless {
   java {
