OPHJOD-1757: Add categories/tags to Study Program articles, fix image permissions, and clean up ingress

--- a/modules/jod-ohjaaja-cms-study-program-importer/build.gradle
+++ b/modules/jod-ohjaaja-cms-study-program-importer/build.gradle
@@ -4,6 +4,7 @@ plugins {
 dependencies {
 	compileOnly group: "com.liferay.portal", name: "release.portal.api"
   compileOnly project(":modules:jod-ohjaaja-cms-navigation")
+  compileOnly project(":modules:jod-ohjaaja-cms-tags")
 }
 spotless {
   java {
