OPHJOD-1794: Add comments moderation functionality

--- a/configs/dev/portal-ext.properties
+++ b/configs/dev/portal-ext.properties
@@ -26,4 +26,5 @@ time.zones=\
         UTC,\
         Europe/Stockholm,\
         Europe/Helsinki
+ohjaaja.backend.url=http://backend.ohjaaja.jod.local:8080/ohjaaja
 
