--- a/configs/local/portal-ext.properties
+++ b/configs/local/portal-ext.properties
@@ -26,4 +26,4 @@ time.zones=\
         UTC,\
         Europe/Stockholm,\
         Europe/Helsinki
-
+ohjaaja.backend.url=http://host.docker.internal:9180/ohjaaja
