--- a/configs/prod/portal-ext.properties
+++ b/configs/prod/portal-ext.properties
@@ -26,3 +26,4 @@ time.zones=\
         UTC,\
         Europe/Stockholm,\
         Europe/Helsinki
+ohjaaja.backend.url=http://backend.ohjaaja.jod.local:8080/ohjaaja
