--- a/modules/jod-ohjaaja-cms-comments-moderation/src/main/resources/content/Language.properties
+++ b/modules/jod-ohjaaja-cms-comments-moderation/src/main/resources/content/Language.properties
@@ -1,14 +1,22 @@
 javax.portlet.title.fi_okm_jod_ohjaaja_cms_comments_moderation_portlet_CommentsModerationPortlet=Comments Moderation
 
 page.title=Comments Moderation
+comments.enabled=Comments are enabled
+comments.disabled=Comments are disabled
 page.description=Moderate comments and their reports submitted by users.
 no.comment.reports=No comment reports found.
 button.delete.comment=Delete comment
 button.delete.reports=Delete reports
+button.disable.comments=Disable comments
+button.enable.comments=Enable comments
 confirm.delete.comment=Are you sure you want to delete this comment?
 confirm.delete.reports=Are you sure you want to delete the comment reports?
+confirm.disable.comments=Are you sure you want to disable comments? Comments will no longer be visible.
+confirm.enable.comments=Are you sure you want to enable comments? Comments will be visible again.
 success.comment.deleted=Comment deleted successfully!
 success.reports.deleted=Comment reports deleted successfully!
+success.comments.enabled=Comments enabled successfully!
+success.comments.disabled=Comments disabled successfully!
 comment=Comment
 comment.time=Written
 registered.count=Registered
