OPHJOD-2067: Add "View article" button to comments moderation view
Improve comments moderation view
Add audit logging for feature toggle, comment and report deletions

--- a/configs/local/portal-ext.properties
+++ b/configs/local/portal-ext.properties
@@ -28,3 +28,4 @@ time.zones=\
         Europe/Helsinki
 ohjaaja.backend.url=http://host.docker.internal:9180/ohjaaja
 konfo.api.study.programs.url=https://testiopintopolku.fi/konfo-backend/external/search/koulutukset?luokittelutermi=ohjaajakoulutukset&size=100
+ohjaaja.frontend.url=http://localhost:8180/ohjaaja
