--- a/configs/prod/portal-ext.properties
+++ b/configs/prod/portal-ext.properties
@@ -28,3 +28,4 @@ time.zones=\
         Europe/Helsinki
 ohjaaja.backend.url=http://backend.ohjaaja.jod.local:8080/ohjaaja
 konfo.api.study.programs.url=https://opintopolku.fi/konfo-backend/external/search/koulutukset?luokittelutermi=ohjaajakoulutukset&size=100
+ohjaaja.frontend.url=https://osaamispolku.fi/ohjaaja
