--- a/modules/jod-ohjaaja-cms-comments-moderation/src/main/resources/content/Language.properties
+++ b/modules/jod-ohjaaja-cms-comments-moderation/src/main/resources/content/Language.properties
@@ -7,6 +7,7 @@ page.description=Moderate comments and their reports submitted by users.
 no.comment.reports=No comment reports found.
 button.delete.comment=Delete comment
 button.delete.reports=Delete reports
+button.view.article=View article
 button.disable.comments=Disable comments
 button.enable.comments=Enable comments
 confirm.delete.comment=Are you sure you want to delete this comment?
