--- a/configs/dev/portal-ext.properties
+++ b/configs/dev/portal-ext.properties
@@ -28,3 +28,4 @@ time.zones=\
         Europe/Helsinki
 ohjaaja.backend.url=http://backend.ohjaaja.jod.local:8080/ohjaaja
 konfo.api.study.programs.url=https://testiopintopolku.fi/konfo-backend/external/search/koulutukset?luokittelutermi=ohjaajakoulutukset&size=100
+ohjaaja.frontend.url=https://jodkehitys.fi/ohjaaja
