OPHJOD-2446: Create production tag during deployment

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -127,6 +127,7 @@ jobs:
     uses: ./.github/workflows/deploy.yml
     permissions:
       id-token: write
+      contents: write
     secrets: inherit
     with:
       environment: dev
@@ -141,6 +142,7 @@ jobs:
     uses: ./.github/workflows/deploy.yml
     permissions:
       id-token: write
+      contents: write
     secrets: inherit
     with:
       environment: test
@@ -155,6 +157,7 @@ jobs:
     uses: ./.github/workflows/deploy.yml
     permissions:
       id-token: write
+      contents: write
     secrets: inherit
     with:
       environment: production
