OPHJOD-2460: Show all comments in moderation

--- a/modules/jod-ohjaaja-cms-comments-moderation/src/main/resources/content/Language.properties
+++ b/modules/jod-ohjaaja-cms-comments-moderation/src/main/resources/content/Language.properties
@@ -4,6 +4,9 @@ page.title=Comments Moderation
 comments.enabled=Comments are enabled
 comments.disabled=Comments are disabled
 page.description=Moderate comments and their reports submitted by users.
+reported.comments=Reported comments
+all.comments=All comments
+no.comments=No comments found.
 no.comment.reports=No comment reports found.
 button.delete.comment=Delete comment
 button.delete.reports=Delete reports
@@ -24,6 +27,9 @@ registered.count=Registered
 anonymous.count=Anonymous
 latest.report=Latest report
 actions=Actions
+previous.page.aria=Go to previous page, {0}
+next.page.aria=Go to next page, {0}
+page.number.aria=Go to page number {0}
 
 error.fetching.comment.reports=Sorry, we couldn’t fetch the comment reports at the moment. Please try refreshing the page in a little while. If the issue continues, contact support and we’ll help you.
 error.deleting.comment=The comment couldn’t be deleted right now. Please try again shortly. If the problem persists, contact support and we’ll assist you.
